# alto

./: .gitignore  Cargo.toml  README.md  SECURITY.md  package-lock.json
.github/actions/setup/: action.yml
.github/workflows/: coverage.yml  publish.yml  tests.yml
chain/: Cargo.toml  Dockerfile  README.md  dashboard.json
chain/src/: application.rs  engine.rs  indexer.rs  lib.rs  supervisor.rs  utils.rs
chain/src/actors/: mod.rs
chain/src/actors/application/: actor.rs  ingress.rs  mod.rs  supervisor.rs
chain/src/actors/syncer/: actor.rs  archive.rs  buffer.rs  coordinator.rs  ingress.rs  key.rs  mod.rs
chain/src/application/: actor.rs  ingress.rs  mod.rs
client/: Cargo.toml  README.md
client/src/: consensus.rs  lib.rs  utils.rs
explorer/: README.md  package-lock.json  package.json
explorer/public/: index.html  manifest.json
explorer/src/: AboutModal.css  AboutModal.tsx  App.css  App.tsx  ErrorBoundary.tsx  ErrorNotification.css  ErrorNotification.tsx  KeyModal.tsx  MaintenancePage.css  MaintenancePage.tsx  MapOverlay.css  MapOverlay.tsx  SearchModal.css  SearchModal.tsx  StatsSection.css  StatsSection.tsx  config.ts  global_config.ts  index.tsx  local_config.ts  logo-animation.js  types.ts  usa_config.ts  useClockSkew.ts  utils.ts
explorer/src/alto_types/: alto_types.js  alto_types_bg.wasm
indexer/: Cargo.toml  README.md
indexer/src/: lib.rs  main.rs
inspector/: Cargo.toml  README.md
inspector/src/: main.rs  utils.rs
scripts/: bump_versions.sh
types/: Cargo.toml  README.md
types/src/: block.rs  consensus.rs  lib.rs  wasm.rs
