[workspace]
members = [
    "chain",
    "client",
    "inspector",
    "types",
]
resolver = "2"

[workspace.package]
version = "0.0.14"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
alto-client = { version = "0.0.14", path = "client" }
alto-types = { version = "0.0.14", path = "types" }
commonware-broadcast = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "d71d77680082d665f45da7ea6edebd5c566f1be9" }
commonware-codec = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "d71d77680082d665f45da7ea6edebd5c566f1be9" }
commonware-consensus = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "d71d77680082d665f45da7ea6edebd5c566f1be9" }
commonware-cryptography = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "d71d77680082d665f45da7ea6edebd5c566f1be9" }
commonware-deployer = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "d71d77680082d665f45da7ea6edebd5c566f1be9", default-features = false }
commonware-macros = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "d71d77680082d665f45da7ea6edebd5c566f1be9" }
commonware-p2p = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "d71d77680082d665f45da7ea6edebd5c566f1be9" }
commonware-resolver = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "d71d77680082d665f45da7ea6edebd5c566f1be9" }
commonware-runtime = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "d71d77680082d665f45da7ea6edebd5c566f1be9" }
commonware-storage = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "d71d77680082d665f45da7ea6edebd5c566f1be9" }
commonware-stream = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "d71d77680082d665f45da7ea6edebd5c566f1be9" }
commonware-utils = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "d71d77680082d665f45da7ea6edebd5c566f1be9" }
thiserror = "2.0.12"
bytes = "1.7.1"
rand = "0.8.5"
prost = "0.13.5"
prost-build = "0.13.5"
futures = "0.3.31"
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
governor = "0.6.3"
prometheus-client = "0.22.3"
clap = "4.5.18"

[profile.bench]
# Because we enable overflow checks in "release," we should benchmark with them.
overflow-checks = true

[profile.dev]
# Although overflow checks are enabled by default in "dev", we explicitly
# enable them here for clarity.
overflow-checks = true

[profile.release]
# To guard against unexpected behavior in production, we enable overflow checks in
# "release" although they incur some performance penalty.
overflow-checks = true

[profile.test]
# Although overflow checks are enabled by default in "test", we explicitly
# enable them here for clarity.
overflow-checks = true
