[workspace]
members = [
    "chain",
    "client",
    "inspector",
    "indexer",
    "types",
]
resolver = "2"

[workspace.package]
version = "0.0.16"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
alto-client = { version = "0.0.16", path = "client" }
alto-types = { version = "0.0.16", path = "types" }
commonware-broadcast = "0.0.64"
commonware-codec = "0.0.64"
commonware-consensus = "0.0.64"
commonware-cryptography = "0.0.64"
commonware-deployer = { version = "0.0.64", default-features = false }
commonware-macros = "0.0.64"
commonware-p2p = "0.0.64"
commonware-resolver = "0.0.64"
commonware-runtime = "0.0.64"
commonware-storage = "0.0.64"
commonware-stream = "0.0.64"
commonware-utils = "0.0.64"
commonware-math = "0.0.64"
thiserror = "2.0.12"
bytes = "1.7.1"
rand = "0.8.5"
prost = "0.13.5"
prost-build = "0.13.5"
futures = "0.3.31"
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
governor = "0.10.2"
prometheus-client = "0.22.3"
clap = "4.5.18"
tokio = "1.41.0"
axum = "0.8.8"
tower = "0.5.2"
tower-http = "0.6.2"
reqwest = "0.12.12"
tokio-tungstenite = "0.28.0"

[profile.bench]
# Because we enable overflow checks in "release," we should benchmark with them.
overflow-checks = true

[profile.dev]
# Although overflow checks are enabled by default in "dev", we explicitly
# enable them here for clarity.
overflow-checks = true

[profile.release]
# To guard against unexpected behavior in production, we enable overflow checks in
# "release" although they incur some performance penalty.
overflow-checks = true

[profile.test]
# Although overflow checks are enabled by default in "test", we explicitly
# enable them here for clarity.
overflow-checks = true
