[package]
name = "alto-chain"
version.workspace = true
publish = true
edition.workspace = true
license.workspace = true
description = "A minimal (and wicked fast) blockchain built with the Commonware Library."
readme = "README.md"
homepage = "https://alto.commonware.xyz"
repository = "https://github.com/commonwarexyz/alto/tree/main/chain"
documentation = "https://docs.rs/alto-chain"

[dependencies]
alto-types = { workspace = true }
alto-client = { workspace = true }
commonware-broadcast = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-deployer = { workspace = true }
commonware-macros = { workspace = true }
commonware-p2p = { workspace = true }
commonware-resolver = { workspace = true }
commonware-runtime = { workspace = true }
commonware-storage = { workspace = true }
commonware-stream = { workspace = true }
commonware-utils = { workspace = true }
bytes =  { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json"] }
governor = { workspace = true }
prometheus-client = { workspace = true }
clap = { workspace = true }
uuid = { version = "1.15.1", features = ["v4"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9.34"

[[bin]]
name = "validator"
path = "src/bin/validator.rs"

[[bin]]
name = "setup"
path = "src/bin/setup.rs"
