[package]
name = "alto-client"
version.workspace = true
publish = true
edition.workspace = true
license.workspace = true
description = "Client for interacting with alto."
readme = "README.md"
homepage = "https://alto.commonware.xyz"
repository = "https://github.com/commonwarexyz/alto/tree/main/client"
documentation = "https://docs.rs/alto-client"

[dependencies]
alto-types = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-utils = { workspace = true }
bytes =  { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
reqwest = "0.12.12"
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
tokio = { version = "1.40.0", features = ["full"] }
