[package]
name = "alto-indexer"
version.workspace = true
publish = true
edition.workspace = true
license.workspace = true
description = "Serve alto activity."
readme = "README.md"
homepage = "https://alto.commonware.xyz"
repository = "https://github.com/commonwarexyz/alto/tree/main/indexer"
documentation = "https://docs.rs/alto-indexer"

[dependencies]
alto-client = { workspace = true }
alto-types = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-utils = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
tokio-tungstenite = { workspace = true }

[[bin]]
name = "indexer"
path = "src/main.rs"

[lib]
name = "alto_indexer"
path = "src/lib.rs"

[dev-dependencies]
commonware-cryptography = { workspace = true, features = ["mocks"] }
commonware-consensus = { workspace = true, features = ["mocks"] }
rcgen = { version = "0.14.6", features = ["crypto", "pem"] }
rustls = { version = "0.23.23", features = ["aws_lc_rs"] }
tokio-rustls = "0.26.2"
hyper = "1.6.0"
hyper-util = { version = "0.1.10", features = ["tokio", "server-auto"] }
