[package]
name = "alto-inspector"
version.workspace = true
publish = true
edition.workspace = true
license.workspace = true
description = "Inspect alto activity."
readme = "README.md"
homepage = "https://alto.commonware.xyz"
repository = "https://github.com/commonwarexyz/alto/tree/main/inspector"
documentation = "https://docs.rs/alto-inspector"

[dependencies]
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-utils = { workspace = true }
commonware-parallel = { workspace = true }
alto-types = { workspace = true }
alto-client = { workspace = true }
bytes =  { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { version = "1.40.0", features = ["full"] }
futures = { workspace = true }

[[bin]]
name = "inspector"
path = "src/main.rs"
