[package]
name = "alto-types"
version.workspace = true
publish = true
edition.workspace = true
license.workspace = true
description = "Common types used throughout alto."
readme = "README.md"
homepage = "https://alto.commonware.xyz"
repository = "https://github.com/commonwarexyz/alto/tree/main/types"
documentation = "https://docs.rs/alto-types"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-utils = { workspace = true }
bytes =  { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = "0.2.100"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

# Enable "js" feature when WASM is target
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.3.4"
features = ["wasm_js"]

[dev-dependencies]
commonware-consensus = { workspace = true, features = ["mocks"] }
commonware-cryptography = { workspace = true, features = ["mocks"] }
commonware-math = { workspace = true }
